--- a/Calculator/index.html
+++ b/Calculator/index.html
@@ -9,10 +9,13 @@
 
 		body {
 			background-color: burlywood;
+			display: flex;
+			flex-direction: row;
 		}
 
-		#app {
-			width: inherit;
+		.app {
+			/* width: 50%; */
+			width: 100%;
 			min-height: inherit;
 			display: flex;
 			flex-direction: column;
@@ -43,7 +46,7 @@
 	</style>
 </head>
 <body>
-	<div id="app"></div>
+	<div id="app" class="app"></div>
 	<script src="./app.js"></script>
 </body>
 </html>
